public class Stats {
    void displayStats(){

    }
}
