public class Workout {
    void startWorkout(){

    }

    void displayPrograms(){

    }


}
